--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*{
+ font-family: 'Open Sans', sans-serif;
+}
+
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +41,115 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* --------------------------------------------- */
+
+.product-base {
+  width: 320px;
+  text-align: left;
+  position: relative;
+  vertical-align: top;
+  overflow: hidden;
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 10px 30px;
+  border-radius: 20px;
+}
+
+.product-base-img {
+  display: block;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+/* .product-brand {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1;
+    color: #282c3f;
+    margin-bottom: 6px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+} */
+
+.heading {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1;
+  color: #282c3f;
+  margin-bottom: 6px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.sub-heading {
+  color: #535766;
+  font-size: 14px;
+  line-height: 1;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-weight: 400;
+  display: block;
+}
+.btnClickHere {
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 1;
+  white-space: nowrap;
+}
+
+@media only screen and (max-width: 600px) {
+  .product-base {
+    margin: 0 10px 30px;
+    border-radius: 20px;
+  }
+
+  .product-base-img {
+    display: block;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 20px 20px 0 0;
+  }
+
+  .heading {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  color: #282c3f;
+  margin-bottom: 6px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.sub-heading {
+  overflow: none;
+  text-overflow:none;
+  white-space: none;
+  
+  
+}
+.text-sub-heading {
+   white-space: normal;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   line-height: 16px; /* fallback */
+   max-height: 32px; /* fallback */
+   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-box-orient: vertical;
+}
+.btnClickHere {
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 1;
+  white-space: nowrap;
+}
+
 }
